# RELAX

./: .gitignore  LICENSE  README.md  RELAX.ipynb  pyproject.toml  setup.py
notebooks/: RELAX.ipynb  getting_started_with_relax.ipynb
src/: __init__.py  masking_functions.py  relax.py
src/relax_xai/: masking_functions.py  relax.py  test.py  utils.py
src/relax_xai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
